# kfs

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment-dev.yml  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/kfs/: __init__.py  __main__.py  cli.py  db.py  table.py
tests/: conftest.py  test_cli.py  test_db.py  test_version.py
