[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm[toml]>=6.2"]

[project]
authors = [
  {name = "Matt Kramer", email = "matthew.robert.kramer@gmail.com"}
]
dependencies = [
  "rich<=13.4.2",
  "sqlmodel<=0.0.8",
  "typer<=0.9.0"
]
description = "Kramer's File System"
dynamic = ["version"]
license = {text = "MIT"}
name = "kfs"
requires-python = ">=3.10"

[project.optional-dependencies]
ci = ["tox"]
dev = [
  "mypy<=1.4.1",
  "pytest<=7.4.0",
  "pytest-cov<=4.1.0",
  "toml<=0.10.2",
  "tox"
]

[project.scripts]
kfs = "kfs.cli:app"

[tool.distutils.bdist_wheel]
universal = true

[tool.isort]
force_single_line = true
profile = "black"

[tool.setuptools_scm]
version_scheme = "post-release"
